# screenCapture

./: CMakeLists.txt  README.md  main.cpp
3rdpart/doc/: ffmpeg_doc.txt
3rdpart/ffmpeg_dontkown/lib/arm/: avcodec.lib  avdevice.lib  avfilter.lib  avformat-59.def  avformat.lib  avutil.lib  ffmpeg.lib  swresample.lib  swscale.lib
3rdpart/ffmpeg_dontkown/lib/arm/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswscale.pc
3rdpart/ffmpeg_dontkown/lib/arm64/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil-57.def  avutil.lib  ffmpeg-5.def  ffmpeg.lib  swresample.lib  swscale.lib
3rdpart/ffmpeg_dontkown/lib/arm64/pkgconfig/: libavcodec.pc  libavdevice.pc  libavformat.pc  libswresample.pc
3rdpart/ffmpeg_dontkown/lib/x64/: ffmpeg.lib
3rdpart/ffmpeg_dontkown/lib/x64/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc
3rdpart/ffmpeg_dontkown/lib/x86/: avcodec-59.def  avcodec.lib  avfilter.lib  avformat.lib  avutil.lib  ffmpeg.lib  swresample.lib  swscale.lib
3rdpart/ffmpeg_dontkown/lib/x86/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc
src/: decodevideo.cpp  decodevideo.h  partarea.cpp  partarea.h  resources.qrc  screencapture.h  screencapturefactory.h  widget.cpp  widget.h
src/breakpad/: breakpad.pri  crashhandler.cpp  crashhandler.h
src/breakpad/src/client/: minidump_file_writer.cc
src/core/: screencapture.cpp  screencapturefactory.cpp  screencapturefactory.h
src/moudle/: partarea.cpp  partarea.h
src/view/: screencapturedialog.cpp  screencapturedialog.h  widget.cpp  widget.h  widget.ui
